--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="text-box">
         <h1>Primo's 21st Birthday Party!</h1>
         <p>Join us at the Federal Way Community Cener<br>to celebrate Primo's 21st Birthday!</p>
-        <a href="" class="hero-btn">RSVP</a>
+        <a href="https://forms.gle/RtjrgRkWK4eP7SYG6" class="hero-btn">RSVP</a>
     </div>
         
         
