--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </nav>
         
     <div class="text-box">
-        <h1>Primo's 21st Birthday Party</h1>
-        <p>Join us at the Federal Way Community Center<br>to celebrate Primo's 21st Birthday</p>
+        <h1>Primo's Birthday Party</h1>
+        <p>Join us at the Federal Way Community Center<br>to celebrate Primo's 21st Birthday!</p>
         <a href="https://forms.gle/RtjrgRkWK4eP7SYG6" class="hero-btn">RSVP</a>
     </div>
         
