--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     <h1>Location</h1>
     <p>Federal Way Community Center<br>876 S 333rd St, Federal Way, WA 98003</p>
     <div class="row">
-        <img src="images/CenterPlaceHold.jpg" alt="">
+        <p><iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10821.801202158444!2d-122.3230761!3d47.3055409
+                    !3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549057a1665af2ef%3A0x7dc0502109815c18!2sFederal%20Way%20Community%20Center!
+                    5e0!3m2!1sen!2sus!4v1722278047517!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" 
+                           loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
     </div>
 </section>
     
