--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
 <section class="location" id=spot>
     <h1>Location</h1>
-    <p>Federal Way Community Center<br>876 S 333rd St, Federal Way, WA 98003</p>
+    <p>Federal Way Community Center<br>876 S 333rd St, Federal Way, WA 98003<br><br>12:00pm - 4:30pm<br><br>Dress Code: Semi-formal</p>
     <div class="row">
         <p><iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10821.801202158444!2d-122.3230761!3d47.3055409
                     !3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549057a1665af2ef%3A0x7dc0502109815c18!2sFederal%20Way%20Community%20Center!
