--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         <div class="text-box">
             <h1>Primo's Birthday Party</h1>
-            <p>Join us at the Federal Way Community Center<br>to celebrate Primo's 21st Birthday!<br>Sunday, September 22nd</p>
+            <p>Join us at the Federal Way Community Center<br>to celebrate Primo's 21st Birthday!<br><br>Sunday, September 22nd</p>
             <a href="https://forms.gle/RtjrgRkWK4eP7SYG6" class="hero-btn">RSVP</a>
         </div>
     </section>
